first html changes

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </header>
     <main>
         <div>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="/images/intuit-logo.svg" alt=""></a>
         </div>
         <div>
-            <span></span>
-            <span></span>
-            <span></span>
+            <span><a href=""><img src="" alt=""> mint</a></span>
+            <span><a href=""><img src="" alt="">quickbooks</a></span>
+            <span><a href=""><img src="" alt="">turbotax</a></span>
         </div>
         <fieldset>
             <h3>Create an Intuit account</h3>
