--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+      rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Intuit Accounts - Sign Up</title>
 </head>
 <body>
-    <header>
+    <div class="nav-bar">
         <div>
             <ul>
                 <li>Already have an Intuit account?</li>
-                <li>I forgot my User ID or Password</li>
+                <li><a href="">I forgot my User ID or Password</a></li>
             </ul>
         </div>
-        <button>Sign In</button>
-    </header>
-    <main>
+        <button><span class="material-icons-outlined">lock</span> Sign In</button>
+    </div>
+    <header>
         <div>
             <a href=""><img id="intuit-main-logo" src="/images/intuit-logo.png" alt="intuit-logo"></a>
         </div>
@@ -26,6 +28,8 @@
             <span><a href=""><img src="" alt="">quickbooks</a></span>
             <span><a href=""><img src="" alt="">turbotax</a></span>
         </div>
+    </header>
+    <main>
         <fieldset>
             <h3>Create an Intuit account</h3>
             <p>One account for everything Intuit, including Mint.</p>
