--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </header>
     <main>
         <fieldset>
-            <h3>Create an Intuit account</h3>
-            <p>One account for everything Intuit, including Mint.</p>
-            <a href="">Learn more</a>
+            <h2>Create an Intuit account</h2>
+            <p class="sub-title">One account for everything Intuit, including Mint.</p>
+            <a href="" class="sub-title" id="learn-more">Learn more</a>
             <label>
                 Email address
                 <input type="text" name="email-address">
@@ -41,13 +41,14 @@
             <label>
                 Phone (recommended)
                 <input type="number" name="phone">
+                <span id="standard-call">Standard call, messaging or data rates may apply</span> 
             </label>
             <label>
                 Password
                 <input type="password">
             </label>
-            <button>
-                Create Account
+            <button id="create-account-btn">
+                <span class="material-icons-outlined">lock</span>Create Account
             </button>
             <p>
                 By clicking Create Account, you agree to our <span><a href="">Terms</a></span> and have read and acknowledge our <span><a href="">Global Privacy Statement.</a></span>
