--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div>
             <a href=""><img id="intuit-main-logo" src="/images/intuit-logo.png" alt="intuit-logo"></a>
         </div>
-        <div>
-            <span><a href=""><img src="" alt=""> mint</a></span>
-            <span><a href=""><img src="" alt="">quickbooks</a></span>
-            <span><a href=""><img src="" alt="">turbotax</a></span>
+        <div class="intuit-options">
+            <span><a href="#"><img src="" alt=""> mint</a></span>
+            <span><a href="#"><img src="" alt="">quickbooks</a></span>
+            <span><a href="#"><img src="" alt="">turbotax</a></span>
         </div>
     </header>
     <main>
@@ -50,11 +50,11 @@
             <button id="create-account-btn">
                 <span class="material-icons-outlined">lock</span>Create Account
             </button>
-            <p>
-                By clicking Create Account, you agree to our <span><a href="">Terms</a></span> and have read and acknowledge our <span><a href="">Global Privacy Statement.</a></span>
+            <p id="terms-text">
+                <em>By clicking Create Account, you agree to our <span><a href="#">Terms</a></span> and have read and acknowledge our <span><a href="#">Global Privacy Statement.</a></span></em> 
             </p>
-            <div>
-                <p>Invisible reCAPTCHA by Google <span><a href="">Privacy Policy</a></span> and <span><a href="">Terms of Use.</a></span></p>
+            <div id="recaptcha">
+                <p>Invisible reCAPTCHA by Google <span><a href="#">Privacy Policy</a></span> and <span><a href="#">Terms of Use.</a></span></p>
             </div>
         </fieldset>
     </main>
